--- a/src/index.css
+++ b/src/index.css
@@ -6,3 +6,12 @@
   width: 100%;
   height: 100%;
 }
+
+.no-scroll::-webkit-scrollbar {
+  display: none;
+}
+
+.no-scroll {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
